bug: table header was too low
adjusted from 30px height to 60px

--- a/static/styles/stylesheet.css
+++ b/static/styles/stylesheet.css
@@ -106,9 +106,9 @@ tr:after {
 }
 
 thead th {
-    height: 35px;
+    height: 60px;
     width: 100%;
-
+    vertical-align: top;
     /*text-align: left;*/
 }
 
